vault backup: 2026-08-22 21:04:08